# Computer-Graphics-Project

./: .gitignore  CMakeLists.txt  readme.md  run.sh
src/: constant.hpp  main.cpp  test.cpp  utils.cpp  utils.hpp
src/common/: image.cpp  scene.cpp  scene.hpp
src/core/: base_render.cpp  base_render.hpp  camera.hpp  hit.hpp  light.hpp  material.hpp  object3d.hpp  ray.hpp  sppm_render.cpp  sppm_render.hpp
src/lib/: tiny_obj_loader.h
src/objects/: group.cpp  group.hpp  mesh.cpp  mesh.hpp  plane.hpp  sphere.hpp  triangle.hpp
