CMAKE_MINIMUM_REQUIRED(VERSION 3.10)

PROJECT(render)

SET(CMAKE_CXX_STANDARD 11)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)

# set dynamic library
SET(THREADS_PREFER_PTHREAD_FLAG ON)
FIND_PACKAGE(Threads REQUIRED)

# set static library
ADD_SUBDIRECTORY(deps/vecmath)

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src)

# set cpp files
FILE(GLOB_RECURSE SOURCES src/*.cpp)

#message(${SOURCES})

set(CMAKE_C_FLAGS "-O2 -Wall -fopenmp")
set(CMAKE_CXX_FLAGS "-O2 -Wall -fopenmp")

# add cpp files
ADD_EXECUTABLE(render ${SOURCES})

# add libraries
TARGET_LINK_LIBRARIES(${PROJECT_NAME} vecmath)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} pthread)



#
#SET(PROJECT_SOURCES)
#
#SET(PROJECT_INCLUDES )
#
#ADD_EXECUTABLE(${PROJECT_NAME} ${PROJECT_SOURCES} ${PROJECT_INCLUDES})
#TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PRIVATE include)
